<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />

    <TextView
        android:id="@+id/tvCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/create_account"
        android:textColor="#968523"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <ImageView
        android:id="@+id/mvFirstname"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:background="#EDE5E5"
        app:layout_constraintEnd_toStartOf="@+id/tilFirstname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFirstname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mvFirstname"
        app:layout_constraintTop_toTopOf="@+id/guideline4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/mvLastname"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="4dp"
        android:background="#EDE5E5"
        app:layout_constraintEnd_toStartOf="@+id/tilLastname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mvFirstname"
        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLastname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mvLastname"
        app:layout_constraintTop_toBottomOf="@+id/tilFirstname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/mvEmail"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="4dp"
        android:background="#EDE5E5"
        app:layout_constraintEnd_toStartOf="@+id/tilEmail1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mvLastname"
        app:srcCompat="@drawable/ic_baseline_email_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tilLastname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/mvPassword"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="4dp"
        android:background="#EDE5E5"
        app:layout_constraintEnd_toStartOf="@+id/tilPassword1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mvEmail"
        app:srcCompat="@drawable/ic_baseline_lock_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mvPassword"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail1"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_two"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/mvPassword1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="4dp"
        android:background="#EDE5E5"
        app:layout_constraintEnd_toStartOf="@+id/tilPassword2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mvPassword"
        app:srcCompat="@drawable/ic_baseline_lock_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mvPassword1"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword1"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comfirm_password"
            android:inputType="textPassword"
            android:password="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#968523"
        android:text="@string/sign_up"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword2" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="124dp"
        android:text="@string/login_2"
        android:textColor="#968523"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

    <TextView
        android:id="@+id/tvAlready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintEnd_toStartOf="@+id/tvLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />


</androidx.constraintlayout.widget.ConstraintLayout>